--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jackson.serialization.fail-on-empty-beans=false
+
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+#spring.jackson.serialization.fail-on-empty-beans=false
