--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jackson.serialization.fail-on-empty-beans=false
 
 
-#server.port=60000
+server.port=60000
